2006-12-18  Zack Weinberg  <zackw@panix.com>

	* pcre: New directory, contains trimmed-down version of PCRE library.
	* Makefile.am: Add support for compiling either with our bundled
	PCRE or with a system-provided library.
	* m4/pcre.m4: New file, provides MTN_LIB_PCRE.
	* configure.ac: Use MTN_LIB_PCRE.
	* debian/control: Adjust Build-Depends.

	* m4/boost.m4: Use libboost_filesystem, not libboost_regex, in
	BOOST_STATIC_LINK_OPTION.  Kill MTN_BOOST_LIB_REGEX.
	* .mtn-ignore: Add a few missing files.

2006-11-27  Zack Weinberg  <zackw@panix.com>

	* packet.cc (feed_packet_consumer): Convert from functor object
	into normal static function.  Define all regular expression
	objects statically, at file scope.  Reorganize logic slightly.
	(extract_packets, require): Adjust to match.
	* constants.cc: Delete legal_packet_bytes and all regex_* constants.
	* constants.hh: Similarly.

2006-11-25  Zack Weinberg  <zackw@panix.com>

	* pcrewrap.cc, pcrewrap.hh: New files.
	* Makefile.am: Add them to MOST_SOURCES.  Add pcrewrap.cc to
	tester_SOURCES.
	* configure.ac: Look for libpcre, not libboost-regex.
	* pch.hh: Don't include boost/regex.hpp.
	* diff_patch.cc, globish.cc, lua.cc, luaext_globish.cc
	* packet.cc, uri.cc: Update to new regex interface.
	* netsync.cc: Remove vestigial include of boost/regex.hpp
	(there are no uses of regular expressions in this file).

2006-11-20  Matt Johnston  <matt@ucc.asn.au>

	* tests/mtn_execute_attr_respects_umask/: use ls -l rather than
	stat -c, since the former is posix defined.

2006-11-20  Thomas Keller  <me@thomaskeller.biz>

       * moved automate get_file into cmd_files.cc
       * new automate command get_file_of which is basically mtn cat
       * replaced exception by user error for get_file and get_file_of
       if no arguments are given

2006-11-18  Richard Levitte  <richard@levitte.org>

	* debian/monotone-server.monotone.init (d_start): Remove the
	branch argument, which was all-inklusive anyway.